--- a/app/src/main/res/layout/display_data_bloodpressure_value_layout.xml
+++ b/app/src/main/res/layout/display_data_bloodpressure_value_layout.xml
@@ -25,8 +25,9 @@
 				android:text="value"
 				android:layout_marginLeft="@dimen/dispdata_text_left_margin"
                 android:textColor="@color/white"
-				android:gravity="bottom"
+				android:gravity="center"
 				android:textStyle="bold"
+                android:layout_gravity="center"
 				android:textSize="@dimen/dispdata_text_size_l2" />
 
 		</LinearLayout>
@@ -43,7 +44,7 @@
 				android:layout_height="match_parent"
 				android:text="unit"
                 android:textColor="@color/white"
-				android:gravity="bottom"
+				android:gravity="left"
 				android:textSize="@dimen/dispdata_text_size_s2" />
 
 		</LinearLayout>
@@ -54,6 +55,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
 		android:layout_weight="4.0"
+		android:visibility="visible"
         android:orientation="horizontal">
 
 		<TextView
