--- a/app/src/main/res/layout/activity_pulse_oximeter_main.xml
+++ b/app/src/main/res/layout/activity_pulse_oximeter_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -234,23 +235,59 @@
                     android:src="@mipmap/pulseimage" />
             </RelativeLayout>
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/tv_body_oxygen"
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/cardview_room1"
                     android:layout_width="400dp"
-                    android:layout_height="match_parent"
-                    android:layout_centerHorizontal="true"
+                    android:layout_height="250dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/rectangle"
-                    android:gravity="center"
-                    android:text="spo"
-                    android:textColor="@color/white"
-                    android:textSize="45sp" />
+                    app:cardBackgroundColor="#374752"
+                    app:cardCornerRadius="20dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_body_oxygen_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="10dp"
+                            android:gravity="center"
+                            android:text="Body Oxygen is"
+                            android:textColor="@color/white"
+                            android:textSize="25sp"
+                            android:visibility="gone" />
+
+                        <TextView
+                            android:id="@+id/tv_body_oxygen"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="spo"
+                            android:textColor="@color/white"
+                            android:textSize="45sp" />
+                        <!--                        android:background="@drawable/rectangle"-->
+
+
+                    </LinearLayout>
+
+
+                </android.support.v7.widget.CardView>
+
 
                 <TextView
                     android:id="@+id/tv_pulse_rate"
