--- a/app/src/main/res/layout/display_data_layout_bloodpressure.xml
+++ b/app/src/main/res/layout/display_data_layout_bloodpressure.xml
@@ -71,57 +71,13 @@
 
     </LinearLayout>
 
-   <!-- <LinearLayout
-        android:id="@+id/linearContainer"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="5dp"
-        android:layout_weight="1.0"
-        android:orientation="horizontal"
-        android:textColor="@android:color/transparent"
-        android:visibility="visible">
-
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.0"
-            android:background="@drawable/rectangle">
-
-            <include
-                android:id="@+id/value_layout_systolic"
-                layout="@layout/display_data_bloodpressure_value_layout" />
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.0">
-
-            <include
-                android:id="@+id/value_layout_diastolic"
-                layout="@layout/display_data_bloodpressure_value_layout" />
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.0">
-
-            <include
-                android:id="@+id/value_layout_pulse"
-                layout="@layout/display_data_bloodpressure_value_layout" />
-        </FrameLayout>
-
-    </LinearLayout>-->
-
     <LinearLayout
+        android:id="@+id/linearContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:id="@+id/linearContainer"
-        android:orientation="vertical"
-        android:background="@drawable/bgapp">
+        android:background="@drawable/bgapp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/value_layout_systolic"
@@ -138,78 +94,77 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="25dp"
-                android:orientation="horizontal"
                 android:layout_weight="1"
-                android:weightSum="2"
-                android:background="@drawable/rectangle">
+                android:background="@drawable/rectangle"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:layout_gravity="center"
                     android:layout_weight="0.5"
+                    android:orientation="vertical"
                     tools:ignore="Suspicious0dp">
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_margin="20dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/icon_bp"/>
+                        android:layout_margin="20dp"
+                        android:src="@drawable/icon_bp" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:orientation="vertical"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
                     android:layout_gravity="center_vertical"
                     android:layout_margin="10dp"
+                    android:layout_weight="1.5"
+                    android:orientation="vertical"
                     android:padding="5dp"
                     tools:ignore="Suspicious0dp">
+
                     <TextView
                         android:id="@+id/tv_bloodpressure_title_sys"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:textSize="22sp"
-                        android:textStyle="bold"
+                        android:text="title"
                         android:textColor="@color/white"
-                        android:text="title"/>
+                        android:textSize="22sp"
+                        android:textStyle="bold" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
                         android:layout_gravity="center"
+                        android:layout_margin="10dp"
                         android:gravity="center"
-                        android:layout_margin="10dp">
+                        android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/tv_bloodpressure_value_sys"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Value"
+                            android:textColor="@color/white"
                             android:textSize="30sp"
-                            android:textStyle="bold"
-                            android:textColor="@color/white" />
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tv_bloodpressure_unit_sys"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Unit"
                             android:layout_marginLeft="5dp"
-                            android:textStyle="normal"
+                            android:text="Unit"
+                            android:textColor="@color/white"
                             android:textSize="25sp"
-                            android:textColor="@color/white"/>
+                            android:textStyle="normal" />
 
                     </LinearLayout>
                 </LinearLayout>
-
-
 
 
             </LinearLayout>
@@ -220,73 +175,74 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="25dp"
-                android:orientation="horizontal"
                 android:layout_weight="1"
-                android:weightSum="2"
-                android:background="@drawable/rectangle">
+                android:background="@drawable/rectangle"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:layout_gravity="center"
                     android:layout_weight="0.5"
+                    android:orientation="vertical"
                     tools:ignore="Suspicious0dp">
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_margin="20dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/icon_bp"/>
+                        android:layout_margin="20dp"
+                        android:src="@drawable/icon_bp" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:orientation="vertical"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
-                    android:layout_margin="10dp"
                     android:layout_gravity="center_vertical"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1.5"
+                    android:orientation="vertical"
                     android:padding="10dp"
                     tools:ignore="Suspicious0dp">
+
                     <TextView
                         android:id="@+id/tv_bloodpressure_title_diastolic"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:textSize="22sp"
-                        android:textStyle="bold"
+                        android:text="title"
                         android:textColor="@color/white"
-                        android:text="title"/>
+                        android:textSize="22sp"
+                        android:textStyle="bold" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
                         android:layout_gravity="center"
+                        android:layout_margin="10dp"
                         android:gravity="center"
-                        android:layout_margin="10dp">
+                        android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/tv_bloodpressure_value_diasltolic"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Value"
+                            android:textColor="@color/white"
                             android:textSize="30sp"
-                            android:textStyle="bold"
-                            android:textColor="@color/white" />
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tv_bloodpressure_unit_diastolic"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Unit"
                             android:layout_marginLeft="5dp"
-                            android:textStyle="normal"
+                            android:text="Unit"
+                            android:textColor="@color/white"
                             android:textSize="25sp"
-                            android:textColor="@color/white"/>
+                            android:textStyle="normal" />
 
                     </LinearLayout>
 
@@ -303,91 +259,88 @@
             android:layout_marginLeft="150dp"
             android:layout_marginRight="150dp"
             android:padding="10dp">
+
             <LinearLayout
                 android:id="@+id/value_layout_pulse"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="horizontal"
                 android:layout_marginLeft="275dp"
                 android:layout_marginRight="275dp"
-                android:weightSum="2"
-                android:background="@drawable/rectangle">
+                android:background="@drawable/rectangle"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:layout_gravity="center"
                     android:layout_weight="0.5"
+                    android:orientation="vertical"
                     tools:ignore="Suspicious0dp">
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_margin="20dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/icon_bp"/>
+                        android:layout_margin="20dp"
+                        android:src="@drawable/icon_bp" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:orientation="vertical"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
                     android:layout_gravity="center_vertical"
                     android:layout_margin="10dp"
+                    android:layout_weight="1.5"
+                    android:orientation="vertical"
                     android:padding="10dp"
                     tools:ignore="Suspicious0dp">
+
                     <TextView
                         android:id="@+id/tv_bloodpressure_title_pulse"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:textSize="22sp"
-                        android:textStyle="bold"
+                        android:text="title"
                         android:textColor="@color/white"
-                        android:text="title"/>
+                        android:textSize="22sp"
+                        android:textStyle="bold" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
                         android:layout_gravity="center"
+                        android:layout_margin="10dp"
                         android:gravity="center"
-                        android:layout_margin="10dp">
+                        android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/tv_bloodpressure_value_pulse"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Value"
+                            android:textColor="@color/white"
                             android:textSize="30sp"
-                            android:textStyle="bold"
-                            android:textColor="@color/white" />
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tv_bloodpressure_unit_pulse"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Unit"
                             android:layout_marginLeft="5dp"
-                            android:textStyle="normal"
+                            android:text="Unit"
+                            android:textColor="@color/white"
                             android:textSize="25sp"
-                            android:textColor="@color/white"/>
+                            android:textStyle="normal" />
 
                     </LinearLayout>
                 </LinearLayout>
 
 
-
-
             </LinearLayout>
         </LinearLayout>
-
-
-
 
 
     </LinearLayout>
