--- a/app/src/main/res/layout/and_dashboard_new.xml
+++ b/app/src/main/res/layout/and_dashboard_new.xml
@@ -174,151 +174,139 @@
 
         </LinearLayout>
 
-        <ScrollView
+        <!--<ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
 
             <LinearLayout
+                android:id="@+id/frame_result"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:weightSum="3">
+                android:visibility="visible">
 
-                <LinearLayout
-                    android:id="@+id/frame_images"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:visibility="visible">
-
-                    <LinearLayout
-                        android:id="@+id/LinearLayout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:weightSum="2">
-
-                        <RelativeLayout
-                            android:layout_width="0dp"
-                            android:layout_height="450dp"
-                            android:layout_weight="1"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:id="@+id/iv_bp_step1"
-                                android:layout_width="300dp"
-                                android:layout_height="300dp"
-                                android:layout_centerInParent="true"
-                                android:src="@drawable/bp_cuff_img" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/iv_bp_step1"
-                                android:layout_centerHorizontal="true"
-                                android:text="@string/bloodpressure_step1"
-                                android:textSize="18sp" />
-
-                        </RelativeLayout>
-
-                        <RelativeLayout
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:id="@+id/iv_bp_step2"
-                                android:layout_width="300dp"
-                                android:layout_height="300dp"
-                                android:layout_centerInParent="true"
-                                android:src="@drawable/start_bp_device" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/iv_bp_step2"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginTop="50dp"
-                                android:text="@string/bloodpressure_step2"
-                                android:textSize="18sp" />
-
-                        </RelativeLayout>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/frame_result"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-
-                    android:visibility="visible">
-
-                    <LinearLayout
-                        android:id="@+id/linearlayout_bloodpressure"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <include
-                            android:id="@+id/layout_bp"
-                            layout="@layout/display_data_layout_bloodpressure" />
-
-                    </LinearLayout>
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/frame_button"
+                <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:visibility="visible">
+                    android:fillViewport="true">
 
-                    <TextView
-                        android:id="@+id/tv_result_msg"
+
+                <LinearLayout
+                    android:id="@+id/linearlayout_bloodpressure"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+
+                    <LinearLayout
+                        android:id="@+id/layout_images"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginBottom="@dimen/margin20"
-                        android:gravity="center"
-                        android:text="@string/bloodpressure_step3"
-                        android:textSize="@dimen/space25" />
+                        android:orientation="vertical"
+                        android:visibility="visible">
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="100dp"
-                        android:orientation="horizontal"
-                        android:weightSum="3">
+                        <LinearLayout
+                            android:id="@+id/LinearLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:weightSum="2">
 
-                        <Button
-                            android:id="@+id/btn_skip"
-                            android:layout_width="wrap_content"
-                            android:layout_height="50dp"
-                            android:layout_centerHorizontal="true"
-                            android:layout_gravity="center"
-                            android:layout_margin="5dp"
+                            <RelativeLayout
+                                android:layout_width="0dp"
+                                android:layout_height="450dp"
+                                android:layout_weight="1"
+                                android:orientation="vertical">
 
-                            android:layout_weight="1"
-                            android:background="@drawable/repeat"
+                                <ImageView
+                                    android:id="@+id/iv_bp_step1"
+                                    android:layout_width="300dp"
+                                    android:layout_height="300dp"
+                                    android:layout_centerInParent="true"
+                                    android:src="@drawable/bp_cuff_img" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_below="@id/iv_bp_step1"
+                                    android:layout_centerHorizontal="true"
+                                    android:text="@string/bloodpressure_step1"
+                                    android:textSize="18sp" />
+
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:layout_width="0dp"
+                                android:layout_height="450dp"
+                                android:layout_weight="1"
+                                android:orientation="vertical">
+
+                                <ImageView
+                                    android:id="@+id/iv_bp_step2"
+                                    android:layout_width="300dp"
+                                    android:layout_height="300dp"
+                                    android:layout_centerInParent="true"
+                                    android:src="@drawable/start_bp_device" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_below="@id/iv_bp_step2"
+                                    android:layout_centerHorizontal="true"
+                                    android:text="@string/bloodpressure_step2"
+                                    android:textSize="18sp" />
+
+                            </RelativeLayout>
+
+                        </LinearLayout>
+
+                        <TextView
+                            android:id="@+id/tv_result_msg"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginBottom="@dimen/margin20"
                             android:gravity="center"
-                            android:text="Skip"
-                            android:textColor="@color/white"
-                            android:textSize="35sp"
-                            android:textStyle="bold" />
+                            android:text="@string/bloodpressure_step3"
+                            android:textSize="@dimen/space25" />
 
-                    </RelativeLayout>
+                    </LinearLayout>
 
+                    <include
+                        android:id="@+id/layout_bp"
+                        layout="@layout/display_data_layout_bloodpressure"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone" />
+
+                    <Button
+                        android:id="@+id/btn_skip"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="35dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/repeat"
+                        android:gravity="center"
+                        android:text="Skip"
+                        android:textColor="@color/white"
+                        android:textSize="35sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
+                </ScrollView>
             </LinearLayout>
-        </ScrollView>
+
+
+        </LinearLayout>
+        <!--</ScrollView>-->
 
     </LinearLayout>
 
