--- a/app/src/main/res/layout/activity_otp_login_screen.xml
+++ b/app/src/main/res/layout/activity_otp_login_screen.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:paddingStart="300dp"
     android:paddingEnd="300dp"
-    tools:context=".OtpLoginScreen">
+    tools:context=".screen.OtpVerifyScreen">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,6 +39,42 @@
             android:inputType="number"
             android:layout_height="50dp" />
 
+        <RadioGroup
+            android:id="@+id/rg_language"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/rb_english"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:buttonTint="@color/white"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="English"
+                android:checked="true"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <RadioButton
+                android:id="@+id/rb_hindi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:buttonTint="@color/white"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="Hindi"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
+
+        </RadioGroup>
+
         <Button
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
@@ -51,5 +87,7 @@
             android:gravity="center"
             android:textStyle="bold"
             android:layout_height="50dp" />
+
+
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
