Added third option in login screen

--- a/app/src/main/res/layout/activity_otp_login_screen.xml
+++ b/app/src/main/res/layout/activity_otp_login_screen.xml
@@ -73,6 +73,18 @@
                 android:textColor="@color/white"
                 android:textSize="25sp" />
 
+            <RadioButton
+                android:id="@+id/rb_marathi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:buttonTint="@color/white"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="Marathi"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
+
         </RadioGroup>
 
         <Button
