--- a/app/src/main/res/layout/activity_otp_login_screen.xml
+++ b/app/src/main/res/layout/activity_otp_login_screen.xml
@@ -38,7 +38,7 @@
             android:id="@+id/et_mobile_number"
             android:inputType="number"
             android:layout_height="50dp" />
-
+<!--
         <RadioGroup
             android:id="@+id/rg_language"
             android:layout_width="match_parent"
@@ -85,7 +85,25 @@
                 android:textColor="@color/white"
                 android:textSize="25sp" />
 
-        </RadioGroup>
+        </RadioGroup>-->
+
+
+        <Spinner
+            android:id="@+id/spinner_language"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/language_arrays"
+            android:prompt="@string/country_prompt"
+            android:background="@drawable/rectangle"
+            android:layout_margin="20dp"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:paddingLeft="10dp"
+            android:textSize="25sp"
+            android:theme="@style/languageSpinnerItemStyle"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:imeOptions="actionDone"/>
 
         <Button
             android:id="@+id/btn_login"
