--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="gray">#CCCCCC</color>
     <color name="d_gray">#666</color>
     <color name="app_color">#63ccf1</color>
-    <color name = "waveform_background">#2E94D8</color>
+    <color name="waveform_background">#2E94D8</color>
     <drawable name="screen_background_black">#ff000000</drawable>
     <drawable name="translucent_background">#e0000000</drawable>
     <drawable name="transparent_background">#00000000</drawable>
@@ -133,6 +133,10 @@
     <!-- indigo -->
     <color name="buttonback">#008fd1</color>
     <!--blue-->
+
+    <color name="colorNavHeaderLight">#002f42</color>
+    <color name="colorNavHeaderDark">#002433</color>
+    <color name="colorHeader">#005073</color>
 
 
 </resources>
