feature usage counter functionaliety done

--- a/app/src/main/res/layout/row_connected_list_layout.xml
+++ b/app/src/main/res/layout/row_connected_list_layout.xml
@@ -13,7 +13,7 @@
         android:background="@drawable/rectangle_blue"
         android:gravity="center_vertical"
         android:paddingLeft="40dp"
-        android:text="aslashlgdasbnjskals"
+        android:text=""
         android:textSize="25sp" />
 
 </RelativeLayout>
