--- a/app/src/main/res/layout/printpreview.xml
+++ b/app/src/main/res/layout/printpreview.xml
@@ -196,7 +196,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/margin20"
                 android:layout_weight="1"
-                android:background="@drawable/greenback"
+                android:background="@drawable/grayback"
                 android:gravity="center"
                 android:text="Home"
                 android:textColor="@color/white"
@@ -210,7 +210,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/greenback"
+                android:background="@drawable/grayback"
                 android:gravity="center"
                 android:text="PRINT"
                 android:textColor="@color/white"
@@ -224,7 +224,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/greenback"
+                android:background="@drawable/grayback"
                 android:gravity="center"
                 android:text="Reconnect"
                 android:textColor="@color/white"
